@@ -1,3 +1,11 @@
+2005-06-03  Han-Wen Nienhuys  <hanwen@xs4all.nl>
+
+	* nl/index.html: zinsbouw.
+
+2005-06-02  Han-Wen Nienhuys  <hanwen@xs4all.nl>
+
+	* nl/index.html: various fixes of the Dutch translation. 
+
 2005-06-01  Jan Nieuwenhuizen  <janneke@gnu.org>
 
 	* scripts/format-page.py (grab_ihtml): Oops look in topdir too.
